css/styles.css
*{
	box-sizing: border-box;
}

html, body{
	height: 100%;
	width: 100%;
}

body{
	text-align: center;
}

.twitter-embed{
	width: 90%;
	display: block;
	margin: 0 auto;
}

h1{
	font-family: 'Rokkitt', serif;
	font-size: 5em;
	color: #FFFFFF;
	margin: 0;
}

.small-only{
	display:block;
}

h2{
	color: #FFFFFF;
	margin: 0;
	font-family: 'Roboto', sans-serif;
	font-size: 1.2em;
	letter-spacing: 1px;
	padding-bottom: 10px;
}

header{
	background: rgba(5,0,148,1);
	background: linear-gradient(135deg, rgba(5,0,148,1) 0%, rgba(168,21,2,1) 100%);
	user-select: none;
	cursor: default;
	margin-bottom: 50px;
	padding: 50px;
}

button{
	background-color: white;
	border: 4px solid black;
	border-radius: 50px;
	width: 350px;
	height: 80px;
	font-size: 1.5em;
	display: block;
	user-select: none;
	margin: 0 auto;
	margin-bottom: 15px;
	position: relative;
	padding: 0 80px;
}

.location-error{
	display: none;
	background-color: #ce4a4a;
	color: #FFFFFF;
	padding: 10px 0;
	margin-bottom: 10px;

}

i{
	position: absolute;
	top: 50%;
	left: 50px;
	transform: translateY(-50%);
}

button:hover{
	background-color: #c9d3e2;
	cursor: pointer;
}

button:focus{
	outline:0;
}

.or{
	display:block;
	margin: 0 auto
}

input{
	display: block;
	margin: 0 auto;
	margin-top: 15px;
	margin-bottom: 50px;
	background-color: white;
	border: 4px solid black;
	border-radius: 50px;
	width: 100%;
	height: 60px;
	font-size: 1.5em;
	padding-left: 30px;
}

input:focus{
	outline:0;
}


.party{
	display:block;
	color: white;
	font-family: 'Raleway', sans-serif;
	padding-top: 4px;
	padding-bottom: 4px;
	margin-bottom: 4px;
	background-color: #000000;
}

.Democratic{
	background-color: #0140A6;
}

.Republican{
	background-color: #B70505;
}

.chamber{
	display: block;
	font-family: 'Raleway', sans-serif;
}

.name{
	font-size: 2em;
	font-family: 'Rokkitt', serif;
}

@media only screen and (min-width: 600px){
	h1{
		font-size: 6em;
	}
	.twitter-embed{
		width: 360px;
		display: inline-block;
		margin: 0 auto;
	}

	input{
		width: 550px;
	}

	.small-only{
		display:none;
	}
}

